# vri.cred

./: AI-Powered SME Credit Intelligence Layer.md  CONTINUE.md  DEPLOYMENT_FIXES.md  GEMINI_ANTIGRAVITY_MEMORY.md  README.md  implementation_plan.md  netlify.toml  package.json  requirements.txt  resume.md  start-dev.sh  vercel.json
api/: index.py
demo/backend/: .env.example  .env.example.enc.txt  .env.local  .env.local.example  .env.local.example.enc.txt  pyproject.toml  requirements.txt
demo/backend/ml/: demo_xgb_model.pkl  feature_names.json
demo/backend/src/: main.py
demo/backend/src/api/: routes.py  schemas.py
demo/backend/src/core/: config.py  exceptions.py  logging.py  utils.py
demo/backend/src/reports/: generator.py
demo/backend/src/scoring/: features.py  model.py  pipeline.py  repositories.py
demo/backend/src/vri_msme_credit_scoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demo/frontend/: app.js  index.html  styles.css
netlify/functions/: gstins.mjs  health.mjs  report.mjs  score.mjs  shared.mjs
